# srp-cafarm-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agent-docs/: plan_v1.md
app/: config.py  database.py  exceptions.py  main.py  seed.py
app/analytics/: router.py  schemas.py  service.py
app/animals/: models.py  repository.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 8fbc8e5ce2ac_init_schema.py
tests/: conftest.py  test_age_logic.py  test_analytics.py  test_animals_api.py  test_status_and_note.py
